# pytch-build

./: .gitignore  LICENSE.md  README.rst  pyproject.toml  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: build-and-test.yaml
boing/: code.py  dummy-file-1  dummy-file-2  metadata.json  summary.md  tutorial.md
boing/asset-src/: make-image.sh
boing/tutorial-assets/: dummy-copyright-credit.txt
catch-apple/: code.py
doc/: conf.py  index.rst
doc/makesite/: index.rst
doc/source/: conf.py  index.rst
doc/source/live-reload/: index.rst
doc/source/makesite/: committing-for-beta-or-release.rst  deploying-to-hosting.rst  development-local-server.rst  index.rst  making-deployment-zipfile.rst  querying-repo-status.rst  testing-deployment-zipfile.rst
doc/source/tutorialcompiler/: fromgitrepo.rst  index.rst  per-method-tutorial.rst  regression-testing.rst  tutorial-collection.rst  tutorial-markdown.rst  tutorial-metadata.rst  tutorial-structure.rst  tutorial-text-dataflow.rst  unit-testing.rst
doc/tutorialcompiler/: fromgitrepo.rst  index.rst  tutorial-structure.rst
makesite/: make-develop.sh  make.sh  merge_zipfiles.py  pytch-git-status.sh  tutorial-asset-credits.sh  tutorials-layer.sh  vm-layer.sh  webapp-layer.sh  website-layer.sh
makesite/local-server/: Dockerfile  dev-server-live-reload-watch.sh  dev-server-medialib.sh  dev-server-pieces.sh  dev-server-skulpt.sh  dev-server-static-blobs.sh  dev-server-tutorials.sh  dev-server-webapp.sh  dev-server.sh  serve-zipfile.sh
pytchbuild/: __init__.py  cli.py  gather_asset_credits.py  gather_asset_media.py  gather_tutorials.py  new_tutorial.py  watch.py
pytchbuild/tutorialcompiler/: __init__.py  gather_tutorials.py  medialib.py
pytchbuild/tutorialcompiler/fromgitrepo/: __init__.py  cached_property.py  config.py  errors.py  interop.py  repo_functions.py  structured_diff.py  structured_program.py  tutorial_bundle.py  tutorial_history.py  tutorial_html_fragment.py  tutorial_markdown.py  utils.py
tests/: test_pytchbuild.py
tests/cli/: test_cli.py
tests/tutorialcompiler/fromgitrepo/: conftest.py  test_medialib.py  test_repo_functions.py  test_structured_program.py  test_tutorial_bundle.py  test_tutorial_history.py  test_tutorial_html_fragment.py  test_tutorial_markdown.py
tests/tutorialcompiler/fromgitrepo/structured-program-fixtures/: canon_actors_none.py  canon_actors_one_first.py  canon_actors_one_last.py  canon_actors_too_many.py  invalid_class_costumes_contains_int.py  invalid_class_costumes_contains_lambda.py  invalid_class_costumes_not_list.py  valid_classes.py  (+7 more)
