[tool.poetry]
name = "pytch-build"
version = "0.1.0"
description = "Assemble Pytch website from content, IDE, and tutorials"
authors = ["Ben North <ben@redfrontdoor.org>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "pytch_build"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
