[tool.poetry]
name = "pytch-build"
version = "0.1.0"
description = "Assemble Pytch website from content, IDE, and tutorials"
homepage = "https://github.com/pytchlang/pytch-build"
authors = ["Ben North <ben@redfrontdoor.org>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
packages = [{include = "pytch_build"}]

[tool.poetry.dependencies]
python = "^3.8"
pygit2 = ">=1.2.1"
Markdown = ">=3.2.2"
beautifulsoup4 = ">=4.9.1"
click = ">=7.1.0"
watchdog = ">=0.10.3"
websockets = ">=8.1"
janus = ">=0.5.0"
pyyaml = ">=5.3.1"
colorlog = ">=4.2.1"

[tool.poetry.scripts]
pytchbuild = "pytchbuild.cli:main"
pytchbuild-watch = "pytchbuild.watch:main"
pytchbuild-gather-tutorials = "pytchbuild.gather_tutorials:main"
pytchbuild-new-tutorial = "pytchbuild.new_tutorial:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
