[tool.poetry]
name = "pytch-build"
version = "0.1.0"
description = "Assemble Pytch website from content, IDE, and tutorials"
homepage = "https://github.com/pytchlang/pytch-build"
authors = ["Ben North <ben@redfrontdoor.org>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
packages = [{include = "pytchbuild"}]

[tool.poetry.dependencies]
python = "^3.9"
pygit2 = ">=1.15"
Markdown = ">=3.7"
beautifulsoup4 = ">=4.12"
click = ">=8.1"
watchdog = ">=5.0"
websockets = ">=13.0"
janus = ">=1.0"
pyyaml = ">=6.0"
colorlog = ">=6.8"
Pillow = ">=10.4"
requests = ">=2.32"

[tool.poetry.scripts]
pytchbuild = "pytchbuild.cli:main"
pytchbuild-watch = "pytchbuild.watch:main"
pytchbuild-gather-tutorials = "pytchbuild.gather_tutorials:main"
pytchbuild-new-tutorial = "pytchbuild.new_tutorial:main"
pytchbuild-gather-asset-media = "pytchbuild.gather_asset_media:main"
pytchbuild-gather-asset-credits = "pytchbuild.gather_asset_credits:main"

[tool.poetry.group.dev.dependencies]
tox = ">=4.18"
pytest = "^8.3"
flake8 = ">=7.1"
sphinx = ">=7.4"
sphinx-rtd-theme = ">=2.0"
sphinx-autobuild = ">=2024.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
